syntax = "proto3";
package gridiron.ve.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/nft/v1beta1/nft.proto";
import "gridiron/ve/v1/genesis.proto";

option go_package = "github.com/gridiron-zone/gridiron/x/ve/types";

// Query defines the ve gRPC querier service.
service Query {
  // TotalVotingPower queries the total voting power.
  rpc TotalVotingPower(QueryTotalVotingPowerRequest)
      returns (QueryTotalVotingPowerResponse) {
    option (google.api.http).get = "/gridiron/ve/v1/total_voting_power";
  }

  // VotingPower queries the voting power of a veNFT.
  rpc VotingPower(QueryVotingPowerRequest) returns (QueryVotingPowerResponse) {
    option (google.api.http).get = "/gridiron/ve/v1/voting_power/{ve_id}";
  }

  // VeNfts queries all veNFTs of a given owner.
  rpc VeNfts(QueryVeNftsRequest) returns (QueryVeNftsResponse) {
    option (google.api.http).get = "/gridiron/ve/v1/venfts";
  }

  // VeNft queries an veNFT based on its id.
  rpc VeNft(QueryVeNftRequest) returns (QueryVeNftResponse) {
    option (google.api.http).get = "/gridiron/ve/v1/venfts/{id}";
  }

  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/gridiron/ve/v1/params";
  }
}

message QueryTotalVotingPowerRequest {
  uint64 at_time = 1;
  int64 at_block = 2;
}

message QueryTotalVotingPowerResponse {
  string power = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message QueryVotingPowerRequest {
  string ve_id = 1;
  uint64 at_time = 2;
  int64 at_block = 3;
}

message QueryVotingPowerResponse {
  string power = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// QueryVeNftsRequest is the request type for the Query/VeNfts RPC method
message QueryVeNftsRequest {
  string owner = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryVeNftsResponse is the response type for the Query/VeNfts RPC methods
message QueryVeNftsResponse {
  repeated cosmos.nft.v1beta1.NFT nfts = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryVeNftRequest is the request type for the Query/VeNft RPC method
message QueryVeNftRequest { string id = 1; }

// QueryVeNftResponse is the response type for the Query/VeNft RPC method
message QueryVeNftResponse { cosmos.nft.v1beta1.NFT nft = 1; }

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}
